# api-namespace-plugin

./: CONTRIBUTING.rst  README.md  README.rst  pyproject.toml  setup.py
.github/.workflows/: tests.yaml
array_namespace/: __init__.py  plugin.py
tests/: test.py
