[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "array_namespace"
version = "0.0.1"
description = "Experimental mypy plugin for the Array-API `__array_namespace__` protocol."
readme.text = """*placeholder*"""
readme.content-type = "text/x-rst"
requires-python = ">=3.6"
urls.Home = "https://github.com/BvB93/api-namespace-plugin/blob/main/README.rst"
license.file = "LICENSE"
keywords = [
    "annotations",
    "checker",
    "checking",
    "hinting",
    "hints",
    "type",
    "typechecking",
    "typehinting",
    "typehints",
    "typing",
    "mypy",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development",
    "Typing :: Typed",
]
dependencies = [
    "mypy",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "typing_extensions; python<3.8"
]

[[project.authors]]
name = "Bas van Beek"
